# TapeSort

./: .gitignore  CMakeLists.txt  ReadMe.md
src/: CMakeLists.txt  main.cpp  settings.txt
src/Sort/: ISort.h  Sort.cpp  Sort.h
src/Tape/: ITape.h  Tape.cpp  Tape.h
test/: CMakeLists.txt  main.cpp  test_settings
